chore: change dominant_emotion to dominant_emotions
